# otlp-test-data

./: otlp_test_data.py  pyproject.toml
.github/workflows/: ci.yaml  psr.yaml  psr2.yaml
